--- a/a2/report/A2report.tex
+++ b/a2/report/A2report.tex
@@ -1,4 +1,3 @@
-
 \documentclass[12pt]{article}
 
 \usepackage{fullpage}
@@ -37,8 +36,8 @@ Andrew Wallace - 101210291\\
 Christer Henrysson - 101260693\\[1em]
 \end{center}
 \textbf{Getting started} \\
-Note that Python 3.10 is used for this assignment. Please install requirements using virtual environment via: \\
-  \texttt{python3.10 -m venv .venv} \\
+Note that Python 3.11 is used for this assignment. Please install requirements using virtual environment via: \\
+  \texttt{python3.11 -m venv .venv} \\
   \texttt{source .venv/bin/activate} \\
   \texttt{pip install -r requirements.txt}
 \vspace{0.5em}
@@ -78,10 +77,10 @@ standard output.
         \cline{2-7}
         & Model 1 & Model 2 & Model 3 & Model 1 & Model 2 & Model 3 \\ 
         \hline
-        $0.001$ & 0.9999 & 0.5969 & 0.8768 & 0.999 & 0.6162 & 0.8711\\ 
-        $0.01$ & 0.998 & 0.6032 & 0.8761 & 0.995 & 0.6149 & 0.8698\\ 
-        $0.1$ & 0.9962 & 0.5935 & 0.8743 & 0.9909 & 0.6105 & 0.8692\\ 
-        $1.0$ & 0.9882 & 0.5981 & 0.8681 & 0.9816 & 0.6136 & 0.8644\\ 
+        $0.001$ & 0.9996 & 0.5928 & 0.8779 & 0.999 & 0.6169 & 0.8717\\ 
+        $0.01$ & 0.9982 & 0.602 & 0.8743 & 0.996 & 0.6172 & 0.8691\\ 
+        $0.1$ & 0.9944 & 0.607 & 0.8776 & 0.9917 & 0.6206 & 0.8736\\ 
+        $1.0$ & 0.9891 & 0.603 & 0.8694 & 0.9806 & 0.6182 & 0.8664\\ 
         \hline
       \end{tabular}
       \caption{Training accuracies with different hyper-parameters}
@@ -95,10 +94,10 @@ standard output.
         \cline{2-7}
         & Model 1 & Model 2 & Model 3 & Model 1 & Model 2 & Model 3 \\ 
         \hline
-        $0.001$ & 0.98979 & 0.5655 & 0.88019 & 0.98812 & 0.60035 & 0.87802\\ 
-        $0.01$ & 0.98967 & 0.58031 & 0.88161 & 0.98608 & 0.60598 & 0.87887\\ 
-        $0.1$ & 0.98628 & 0.57143 & 0.88118 & 0.98253 & 0.60263 & 0.8773\\ 
-        $1.0$ & 0.98098 & 0.57876 & 0.87376 & 0.97381 & 0.60573 & 0.87105\\ 
+        $0.001$ & 0.98998 & 0.56133 & 0.8811 & 0.98865 & 0.59616 & 0.87799\\ 
+        $0.01$ & 0.98773 & 0.57185 & 0.88047 & 0.98587 & 0.60043 & 0.87767\\ 
+        $0.1$ & 0.98633 & 0.57489 & 0.88127 & 0.9839 & 0.60185 & 0.87848\\ 
+        $1.0$ & 0.9812 & 0.57157 & 0.87411 & 0.97397 & 0.60293 & 0.87171\\ 
         \hline
       \end{tabular}
       \caption{Test accuracies with different hyper-parameters}
@@ -106,7 +105,7 @@ standard output.
     \end{table}
   \item (1\%) Looking at your tables from above, analyze the results and discuss any findings you may have and the possible reasons behind them. \\
   We can see that the training accuracies are higher when $\lambda$ approaches zero. This is because when lambda approaches zero, the regularization term $\frac{1}{2}\lambda ||\mathbf{w}||_2^2$ also approaches zero. This term is used to prevent overfitting by penalizing complex models. That is, the greater $||\textbf{w}||_2^2$ is (more complex), the greater the value of our objective function will be. The parameter $\lambda$ determines how complex our model is allowed to be. When $\lambda$ is large, the regularization term dominates, and our objective turns into minimizing the complexity of our model. When $\lambda$ is small, the loss function dominates, and our objective turns into minimizing the loss of our model. So, we see the accuracies of our training data increase (from model to model) as our $\lambda$ decreases, since we primarily focus on minimizing the loss. Conversely, as $\lambda$ gets larger (closer to 1), our accuracies decrease. \\[1em]
-  Note that this is not necessarily true when it comes to testing. If our model is overfitted to our training data, then our accuracies for test data will suffer. See the test accuracy for \texttt{ExpLinear}, Model 2. Here we can see that $\lambda = 0.01, 0.1, \text{and} 1.0$ all have higher accuracies compared to $\lambda = 0.001$. This is likely due to the simplified models used (as $\lambda$ increases) being a better fit for the test data.
+  Note that this is not necessarily true when it comes to testing. If our model is overfitted to our training data, then our accuracies for test data will suffer. See the test accuracy for \texttt{ExpLinear}, Model 2. Here we can see that $\lambda = 0.01, 0.1, \text{and } 1.0$ all have higher accuracies compared to $\lambda = 0.001$. This is likely due to the simplified models used (as $\lambda$ increases) being less overfitted to the training data and thus a better fit for the test data.
 \end{enumerate}
 
 \section*{Question 2 (5\%) Binary Classification (Adjoint Form)}
@@ -143,11 +142,11 @@ standard output.
         \cline{2-7}
         & Model 1 & Model 2 & Model 3 & Model 1 & Model 2 & Model 3 \\ 
         \hline
-        Linear & 1.0 & 0.578 & 0.882 & 0.999 & 0.595 & 0.876 \\ 
-        Poly($d = 2$) & 1.0 & 1.0 & 0.879 & 0.998 & 1.0 & 0.871\\ 
-        Poly($d = 3$) & 1.0 & 1.0 & 1.0 & 1.0 & 1.0 & 1.0\\ 
-        Gauss($\sigma = 1$) & 1.0 & 1.0 & 1.0 & 0.999 & 1.0 & 1.0\\ 
-        Gauss($\sigma = 0.5$) & 1.0 & 1.0 & 1.0 & 1.0 & 1.0 & 0.999\\ 
+        Linear & 0.998 & 0.599 & 0.878 & 0.996 & 0.621 & 0.878 \\ 
+        Poly($d = 2$) & 1.0 & 1.0 & 0.875 & 1.0 & 0.999 & 0.871\\ 
+        Poly($d = 3$) & 1.0 & 1.0 & 0.999 & 1.0 & 1.0 & 0.999\\ 
+        Gauss($\sigma = 1$) & 1.0 & 1.0 & 1.0 & 1.0 & 1.0 & 1.0\\ 
+        Gauss($\sigma = 0.5$) & 1.0 & 1.0 & 1.0 & 0.999 & 1.0 & 1.0\\ 
         \hline
       \end{tabular}
       \caption{Training accuracies with different kernels}
@@ -161,45 +160,63 @@ standard output.
         \cline{2-7}
         & Model 1 & Model 2 & Model 3 & Model 1 & Model 2 & Model 3 \\ 
         \hline
-        Linear & 0.9884 & 0.5655 & 0.8826 & 0.9889 & 0.6084 & 0.879 \\ 
-        Poly($d = 2$) & 0.9886 & 0.9724 & 0.8809 & 0.9868 & 0.9723 & 0.8782\\ 
-        Poly($d = 3$) & 0.9815 & 0.9655 & 0.9949 & 0.9774 & 0.964 & 0.9916\\ 
-        Gauss($\sigma = 1$) & 0.9713 & 0.9696 & 0.9975 & 0.963 & 0.9663 & 0.9953\\ 
-        Gauss($\sigma = 0.5$) & 0.9615 & 0.9598 & 0.9985 & 0.9567 & 0.9533 & 0.998\\ 
+        Linear & 0.988 & 0.5561 & 0.8827 & 0.9839 & 0.5875 & 0.881 \\ 
+        Poly($d = 2$) & 0.9786 & 0.9736 & 0.8792 & 0.9801 & 0.9643 & 0.8771\\ 
+        Poly($d = 3$) & 0.9793 & 0.9693 & 0.9965 & 0.9766 & 0.9636 & 0.9918\\ 
+        Gauss($\sigma = 1$) & 0.9784 & 0.9664 & 0.9977 & 0.9686 & 0.9616 & 0.9953\\ 
+        Gauss($\sigma = 0.5$) & 0.9648 & 0.9556 & 0.9982 & 0.9595 & 0.9482 & 0.9976\\ 
         \hline
       \end{tabular}
       \caption{Test accuracies with different kernels}
       \label{tab:test_acc_explinear_hinge_kernel}
     \end{table}
-  \item (1\%) Looking at your tables from above, analyze the results and discuss any findings you may have and the possible reasons behind them. \\
-  Looking at the tables from above we see that the linear kernel for both ExpLinear and Hinge on Model 2 has poor performance in both training and test accuracies. This is likely due to the model not being linearly separable. This is further supported by the results from Kernels Poly($d=2$) and Poly($d = 3$) having higher accuracies (for both ExpLinear and Hinge).\\
-  Second, we see that the training accuracies are 1 for all three models (for both ExpLinear and Hinge) with a Poly($d=3$) kernel. This kernel allows for a non linear model that can fit the data more accurately (e.g., fitting curved boundaries). We also see high accuracies in the test set for the same reason. \\
+  \item (1\%) Looking at your tables from above, analyze the results and discuss any findings you may have and the possible reasons behind them. \\[1em]
+  Looking at the tables from above we see that the linear kernel for both ExpLinear and Hinge on Model 2 has poor performance in both training and test accuracies. Since the data in Model 2 is not linearly separable, and we try to use a linear kernel, we can see that the accuracy suffers. That is, it is not able to accurately classify the data when using a linear classifier (on Model 2). This is further supported by the results from Kernels Poly($d=2$) and Poly($d = 3$) having higher accuracies (for both ExpLinear and Hinge) on Model 2. Furthermore, the accuracies on Model 3 when using a linear kernel are worse than Model 1. Again, this is because the data in Model 3 is not entirely linear separable. So using a linear kernel classifier on this data will not have a high accuracy.\\
+  Second, we see that the training accuracies are almost 1 for all three models (for both ExpLinear and Hinge) with a Poly($d=3$) kernel. This kernel allows for a non linear model that can fit the data more accurately (e.g., fitting curved boundaries), which is suitable for all three models. We also see high accuracies in the test set for the same reason. \\
   Third, the Gauss($\sigma = 1$) appears to have the best overall accuracy across the board. This is likely due to it's flexibility and it's focus on localized points making it robust to outliers.\\
-  Lastly, we notice that most of the training accuracies are high. This is likely due to the low value of $\lambda = 0.001$, allowing the model to be more complex, and thus fitting the training data better.
-
+  Lastly, we notice that most of the training accuracies are high. This is likely due to the low value of $\lambda = 0.001$, allowing the model to be more complex, and thus fitting (maybe overfitting) the training data.
 \end{enumerate}
-
 \section*{Question 3 (5\%) Binary Classification (SVM Dual Form)}
 In this question, you will implement binary classification with the hinge loss (yet again) using the dual formula, and choose the best hyper-parameter and kernel for some real-world problems via cross-validation.
 The input vectors are assumed to be \textbf{un-augmented} in this question (i.e. we do not add a constant feature of 1 to it). All of the following functions must be able to handle arbitrary $n > 0$ and $d > 0$. The vectors and matrices are represented as NumPy arrays. Your functions shouldn't print additional information to the
 standard output.
 \begin{enumerate}[(a)]
   \item (1\%) Implement a Python function
-  \begin{center}
-    \texttt{a, b = dualHinge(X, y, lamb, kernel\_func, stabilizer=1e-5)}
-  \end{center}
+    \begin{center}
+      \texttt{a, b = dualHinge(X, y, lamb, kernel\_func, stabilizer=1e-5)}
+    \end{center}
+    Please see \texttt{A2codes.py} for the implementation of \texttt{dualHinge(X, y, lamb, kernel\_func)}
   \item (1\%) Implement a Python function
-  \begin{center}
-    \texttt{yhat = dualClassify(Xtest, a, b, X, y, lamb, kernel\_func)}
-  \end{center}
+    \begin{center}
+      \texttt{yhat = dualClassify(Xtest, a, b, X, y, lamb, kernel\_func)}
+    \end{center}
+    Please see \texttt{A2codes.py} for the implementation of \texttt{dualClassify(Xtest, a, b, X, y, lamb, kernel\_func)}
   \item (2\%) The A2files.zip includes an image dataset, A2train.csv, of handwritten digits taken from the MNIST dataset. Each image is either digit 4 or digit 9 (once loaded, you can call the \texttt{plotDigit} function to see some samples of the images as in Fig. 4). The first column of the csv file is the class label. Treat digit 4 as the -1 class and digit 9 as the +1 class, your task is to use your \texttt{dualHinge} function to learn a good binary classifier.\\
   In this part, you need to perform cross-validation and select the best hyperparameters and kernels for this dataset. Implement a Python function
   \begin{center}
     \texttt{cv acc, best lamb, best kernel = cvMnist(dataset\_folder, lamb\_list, kernel\_list, k=5)}
   \end{center}
-  \item (1\%) We will evaluate your choices from (c) on a new test dataset (that you don’t have access to). You will get full mark here if your chosen hyper-parameters, kernel function, dualHinge and dualClassify can achieve acceptable performance on the test dataset.
-\end{enumerate}
+  \noindent\textbf{Cross-validation results.}
+  The average validation accuracies (rows = $\lambda$, columns = kernel) are:
+  \begin{table}[H]
+    \centering
+    \begin{tabular}{|c|c|c|c|}
+      \hline
+      $\lambda$ & Linear & Poly($d{=}2$) & Gauss($\sigma{=}1.0$) \\
+      \hline
+      0.001 & 0.958 & \textbf{0.978} & 0.493 \\
+      0.01  & 0.958 & \textbf{0.978} & 0.493 \\
+      0.1   & 0.958 & \textbf{0.978} & 0.493 \\
+      \hline
+    \end{tabular}
+    \caption{Q3(c) average validation accuracies for MNIST (4 vs 9). Best setting: $\lambda{=}0.001$, Poly($d{=}2$).}
+    \label{tab:q3_cv}
+    \end{table}
+    \noindent\textbf{Best choice.}
+    We select $\lambda{=}0.001$ with Polynomial kernel of degree 2, which acheves the highest average validation acuracy ($\approx 0.978$) across all tested $\lambda$ values. The Gaussian kernel with $\sigma{=}1.0$ underperforms on raw pixel features (784-D), likely due to an overly small bandwidth causing near-identity similarities off-diagonal.
 
+  \item (1\%) We will evaluate your choices from (c) on a new test dataset (that you don't have access to). You will get full mark here if your chosen hyper-parameters, kernel function, dualHinge and dualClassify can achieve acceptable performance on the test dataset.
+\end{enumerate}
 \section*{References}
 The following ChatGPT prompt and response was used in this assignment:  \\
 \textbf{Prompt}: \\
