--- a/a3/report/A3report.tex
+++ b/a3/report/A3report.tex
@@ -32,8 +32,8 @@ COMP 3105 -- Assignment 3 Report\\
 \begin{center}
 {\bf Due:} Sunday November 16, 2025 23:59. \\
 Group 51 \\
-Andrew Wallace - 101210291\\[1em]
-% Christer Henrysson - 101260693\\[1em]
+Andrew Wallace - 101210291\\
+Christer Henrysson - 101260693\\[1em]
 \end{center}
 \textbf{Getting started} \\
 Note that Python 3.11 is used for this assignment. Please install requirements using virtual environment via: \\
