--- a/a3/report/A3report.tex
+++ b/a3/report/A3report.tex
@@ -47,6 +47,10 @@ Note that Python 3.11 is used for this assignment. Please install requirements u
 \begin{enumerate}[(a)]
   \item (1\%) Implement a Python function \\
   \texttt{W = minMulDev(X, Y)} \\
+  Recall that multinomial deviance loss is given by: \\
+  \[
+    W^* = \text{argmin}_W \in \mathbb{R}^{d \times k} \frac{1}{n} \sum_{i = 1}^{n} \log(1_{k}^\text{T} \exp^{W^T x_i}) - y_i^\text{T} W^\text{T} x_i
+  \]  
   Please see \texttt{A3codes.py} for the implementation of \texttt{W = minMulDev(X, Y)}
   \item (1\%) Implement a Python function \\
   \texttt{Yhat = classify(Xtest, W)} \\
@@ -55,7 +59,7 @@ Note that Python 3.11 is used for this assignment. Please install requirements u
   \texttt{acc = calculateAcc(Yhat, Y)} \\
   Please see \texttt{A3codes.py} for the implementation of \texttt{acc = calculateAcc(Yhat, Y)}
   \item (1\%) In this part, you will evaluate your implementation on the synthetic datasets from above.
-  The results from the synthetic classification experiment using seed 101210291 report the following training accuracies:
+  The results from the synthetic classification experiment using seed 51 report the following training accuracies:
   \begin{table}[H]
     \centering
     \begin{tabular}{|c|c|c|}
@@ -71,8 +75,7 @@ Note that Python 3.11 is used for this assignment. Please install requirements u
     \caption{Training accuracies with different number of training dataset sizes}
     \label{tab:q1_classification_training}
   \end{table}
-  
-  The results from the synthetic classification experiment using seed 101210291 report the following test accuracies:
+  The results from the synthetic classification experiment using seed 51 report the following test accuracies:
   \begin{table}[H]
     \centering
     \begin{tabular}{|c|c|c|}
@@ -88,12 +91,8 @@ Note that Python 3.11 is used for this assignment. Please install requirements u
     \caption{Test accuracies with different number of training dataset sizes}
     \label{tab:q1_classification_test}
   \end{table}
-
-  \[
-    W^* = \text{argmin}_W \in \mathbb{R}^{d \times k} \frac{1}{n} \sum_{i = 1}^{n} \log(1_{k}^\text{T} \exp^{W^T x_i}) - y_i^\text{T} W^\text{T} x_i
-  \]  
-  Our results show that the training for our linear classifier is less accurate for data generated with data model 1 compared to data generated with model 2. This is because the data in model 1 has more overlap compared to model 2. This makes the data classes more difficult to linearly separate. We also see a trend towards lower accuracies as the number of data points increases. Again, this is possibly due to the difficulty of linearly separating classes when there is more overlapping data points that belong to different classes. 
-  However, this reduces overfitting in the learned classifier, generalizing better to the test dataset. That is, as the number of data points increases in the test dataset, the accuracies increase due to this generalization in the classifier.
+  Our results show that as the size of the input dataset increases ($n$) the accuracy decreases in both models. This is because the classifier can overfit the small dataset size. As the size of the dataset increases, there are more overlapping data points which decreases the accuracy of the classifier. We see this impacting Model 1 more than Model 2 since the data in Model 2 is more linearly separable compared to Model 1. \\[1em]
+  We see the opposite effect in the test dataset. This is because the classifier becomes more generalized (less overfitting) when the training points increase. So, we see the more generalized classifier performing better to unseen datasets (the test dataset). Furthermore, the classification is less accurate on smaller dataset sizes since the classifier becomes overfitted to the training dataset. Again, we see that the accuracies are higher for Model 2 since it is more linearly separable compared to Model 1.
 \end{enumerate}
 
 \section*{Question 2 (7\%) Principle Component Analysis}
@@ -127,7 +126,6 @@ Note that Python 3.11 is used for this assignment. Please install requirements u
     \caption{Training accuracies for PCA classification with different dimension sizes}
     \label{tab:q2_classification_training}
   \end{table}
-  
   The results from the synthetic PCA classification experiment using seed 51 report the following test accuracies:
   \begin{table}[H]
     \centering
@@ -142,7 +140,10 @@ Note that Python 3.11 is used for this assignment. Please install requirements u
     \caption{Test accuracies for PCA classification with different dimension sizes}
     \label{tab:q2_classification_test}
   \end{table}
-  \item (0.5\%) Looking at your tables from above, analyze the results and discuss any findings you may have and the possible reason behind them.
+  \item (0.5\%) Looking at your tables from above, analyze the results and discuss any findings you may have and the possible reason behind them. \\[1em]
+  We see Model 1 has similar accuracies in both the training and test data, regardless of dimension size. This is because the structure of model 1 is linear. So, when projected onto a single dimension (line), the class structure is mostly preserved and has minimal class overlap. This leads to a good accuracy when we do our prediction with multinomial deviance loss. \\[1em]
+  Interestingly, we see similar accuracies when introducing a second dimension. This is because the second dimension does not have a high variance and does little in maintaining class structure in the the projection. That is, most of the variance lies in the first dimension PCA, so adding another dimension does not increase the accuracy by much. \\[1em]
+  However, in Model 2 we see the accuracy increase when we introduce a second dimension (from dimension $k = 1$ to dimension $k= 2$). This is because the classes of data in Model 2 is clustered into different quadrants. So, when we project onto a single dimension, there will be overlap between the classes, leading to poor predication accuracy. When we add the second dimension, the class structure is preserved and leads to a higher prediction accuracy. We see this in both the training and test data.
 \end{enumerate}
 
 \section*{Question 3 (4\%) $k$-means}
