--- a/a4/report/A4report.tex
+++ b/a4/report/A4report.tex
@@ -52,4 +52,8 @@ In the PDF file, explain your learning algorithm and more importantly, why it is
 
 \section*{Question 3 (5\%) Evaluation} 
 For this question, you don't need to submit/write an answer. We will apply your learning method to different training sets and evaluate the performance of the learned model on hold-out test datasets
+
+\section*{References}
+An interesting method for differentiating in (source) vs out (target) domains and using a domain classifier to encourage feature extraction to focus on feature extraction of the source domain, discouraging the target domain.
+https://jmlr.org/papers/volume17/15-239/15-239.pdf
 \end{document} 
